--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ They needed a name for their new world-changing hacker duo. That name is Black T
 
 <p>
 MORPH is an open-world, RPG, 2D platform/puzzle game in early stages of development.
-These are the characters that make up the game:
+These are the characters that make up the game (click to read more):
 </p>
 <div id="sprite-grid">
   <div class="sprite-demo">
