--- a/preview/embed/index.html
+++ b/preview/embed/index.html
@@ -39,10 +39,10 @@ Game.viewportTileHeight = 20;
 Game.viewportWidth = Game.viewportTileWidth * Game.unit;
 Game.viewportHeight = Game.viewportTileHeight * Game.unit;
 Game.resize();
-var level = 'Embed';
+var level = 'embed';
 if ( location.toString().match(/level\=mini/) ) {
   Game.unit = 90;
-  level = 'Mini';
+  level = 'mini';
   Game.viewportTileWidth = 8;
   Game.viewportTileHeight = 4;
   Game.viewportWidth = Game.viewportTileWidth * Game.unit;
